# Comfyui_face_restorer

./: FaceRestore.py  README.md  __init__.py  pyproject.toml  requirements.txt
archs/: arch_RestoreFormer.py
fr_basicsr/: test.py  train.py
fr_basicsr/archs/: __init__.py  arch_util.py  basicvsr_arch.py  basicvsrpp_arch.py  dfdnet_arch.py  discriminator_arch.py  duf_arch.py  ecbsr_arch.py  edsr_arch.py  edvr_arch.py  hifacegan_arch.py  rcan_arch.py  ridnet_arch.py  rrdbnet_arch.py  spynet_arch.py  srresnet_arch.py  srvgg_arch.py  stylegan2_arch.py  swinir_arch.py  tof_arch.py  vgg_arch.py
fr_basicsr/data/: __init__.py  data_util.py  ffhq_dataset.py  paired_image_dataset.py  realesrgan_dataset.py  realesrgan_paired_dataset.py  reds_dataset.py  single_image_dataset.py  video_test_dataset.py  vimeo90k_dataset.py
fr_basicsr/losses/: __init__.py  basic_loss.py  gan_loss.py
fr_basicsr/metrics/: __init__.py  fid.py  metric_util.py  niqe.py  psnr_ssim.py
fr_basicsr/models/: __init__.py  base_model.py  edvr_model.py  esrgan_model.py  hifacegan_model.py  realesrgan_model.py  realesrnet_model.py  sr_model.py  srgan_model.py  stylegan2_model.py  swinir_model.py  video_base_model.py  video_gan_model.py  video_recurrent_gan_model.py  video_recurrent_model.py
fr_basicsr/utils/: diffjpeg.py  logger.py  options.py
